deploy: ea0223916e7befeeac7c28dab28d016caa65688a

--- a/the_machinery_book/extending_the_machinery/write-a-tab.html
+++ b/the_machinery_book/extending_the_machinery/write-a-tab.html
@@ -168,6 +168,7 @@
 
 static struct tm_draw2d_api* tm_draw2d_api;
 static struct tm_ui_api* tm_ui_api;
+static struct tm_allocator_api* tm_allocator_api;
 
 #include &lt;foundation/allocator.h&gt;
 #include &lt;foundation/api_registry.h&gt;
@@ -181,14 +182,12 @@ static struct tm_ui_api* tm_ui_api;
 
 #include &lt;stdio.h&gt;
 
-TM_DLL_EXPORT void load_custom_tab_tab(struct tm_api_registry_api* reg, bool load);
-
 #define TM_CUSTOM_TAB_VT_NAME &quot;tm_custom_tab&quot;
 #define TM_CUSTOM_TAB_VT_NAME_HASH TM_STATIC_HASH(&quot;tm_custom_tab&quot;, 0xbc4e3e47fbf1cdc1ULL)
 
 struct tm_tab_o {
     tm_tab_i tm_tab_i;
-    tm_allocator_i* allocator;
+    tm_allocator_i allocator;
 };
 
 static void tab__ui(tm_tab_o* tab, tm_ui_o* ui, const tm_ui_style_t* uistyle_in, tm_rect_t rect)
@@ -214,14 +213,14 @@ static const char* tab__title(tm_tab_o* tab, struct tm_ui_o* ui)
 
 static tm_tab_i* tab__create(tm_tab_create_context_t* context, tm_ui_o *ui)
 {
-    tm_allocator_i* allocator = context-&gt;allocator;
+    tm_allocator_i allocator = tm_allocator_api-&gt;create_child(context-&gt;allocator, &quot;Custom Tab&quot;);
     uint64_t* id = context-&gt;id;
 
     static tm_the_machinery_tab_vt* vt = 0;
     if (!vt)
         vt = tm_global_api_registry-&gt;get(TM_CUSTOM_TAB_VT_NAME);
 
-    tm_tab_o* tab = tm_alloc(allocator, sizeof(tm_tab_o));
+    tm_tab_o* tab = tm_alloc(&amp;allocator, sizeof(tm_tab_o));
     *tab = (tm_tab_o){
         .tm_tab_i = {
             .vt = (tm_tab_vt*)vt,
@@ -237,7 +236,9 @@ static tm_tab_i* tab__create(tm_tab_create_context_t* context, tm_ui_o *ui)
 
 static void tab__destroy(tm_tab_o* tab)
 {
-    tm_free(tab-&gt;allocator, tab, sizeof(*tab));
+    tm_allocator_i a = tab-&gt;allocator;
+    tm_free(&amp;a, tab, sizeof(*tab));
+    tm_allocator_api-&gt;destroy_child(&amp;a);
 }
 
 static tm_the_machinery_tab_vt* custom_tab_vt = &amp;(tm_the_machinery_tab_vt){
@@ -256,6 +257,7 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api* reg, bool load)
 
     tm_draw2d_api = reg-&gt;get(TM_DRAW2D_API_NAME);
     tm_ui_api = reg-&gt;get(TM_UI_API_NAME);
+    tm_allocator_api = reg-&gt;get(TM_ALLOCATOR_API_NAME);
 
     tm_set_or_remove_api(reg, load, TM_CUSTOM_TAB_VT_NAME, custom_tab_vt);
     tm_add_or_remove_implementation(reg, load, TM_TAB_VT_INTERFACE_NAME, custom_tab_vt);
@@ -301,7 +303,7 @@ TM_DLL_EXPORT void load_custom_tab_tab(struct tm_api_registry_api* reg, bool loa
 <p>In the next section, we define the data the Tab can hold. It might be any data you need for the Tab to work and do its job. The tab instance owns the data. It is not shared between Tabs instances. Therefore its lifetime is bound to the current instance.</p>
 <pre><code class="language-c">struct tm_tab_o {
     tm_tab_i tm_tab_i;
-    tm_allocator_i* allocator;
+    tm_allocator_i allocator;
 };
 </code></pre>
 <p>A <a href="https://ourmachinery.com/apidoc/plugins/ui/docking.h.html#structtm_tab_i">tm_tab_i</a> represents a tab object. A tab object is represented as a <code>vtable</code> that defines its function interface and an opaque pointer to the Tab's internal data. This design is used so that the application layer can extend the <code>vtable</code> with its own interface.</p>
@@ -371,7 +373,7 @@ static const char* tab__title(tm_tab_o* tab, struct tm_ui_o* ui)
 </blockquote>
 <pre><code class="language-c">static tm_tab_i* tab__create(tm_tab_create_context_t* context, tm_ui_o *ui)
 {
-    tm_allocator_i* allocator = context-&gt;allocator;
+     tm_allocator_i allocator = tm_allocator_api-&gt;create_child(context-&gt;allocator, &quot;my tab&quot;);
     static tm_the_machinery_tab_vt* vt = 0;
     if (!vt)
         vt = tm_global_api_registry-&gt;get(TM_CUSTOM_TAB_VT_NAME);
@@ -394,7 +396,7 @@ static const char* tab__title(tm_tab_o* tab, struct tm_ui_o* ui)
         vt = tm_global_api_registry-&gt;get(TM_CUSTOM_TAB_VT_NAME);
 </code></pre>
 <p>After this, we use the provided allocator to allocate the Tab struct, and then we initialize it with the data we deem to be needed. </p>
-<pre><code class="language-c">    tm_tab_o* tab = tm_alloc(allocator, sizeof(tm_tab_o));
+<pre><code class="language-c">    tm_tab_o* tab = tm_alloc(&amp;allocator, sizeof(tm_tab_o));
     *tab = (tm_tab_o){
         .tm_tab_i = {
             .vt = (tm_tab_vt*)vt,
@@ -411,7 +413,9 @@ static const char* tab__title(tm_tab_o* tab, struct tm_ui_o* ui)
 <p>When it comes to free the Tab data, we can just call <code>tm_free()</code> on our Tab:</p>
 <pre><code class="language-c">static void tab__destroy(tm_tab_o* tab)
 {
-    tm_free(tab-&gt;allocator, tab, sizeof(*tab));
+    tm_allocator_i a = tab-&gt;allocator;
+    tm_free(&amp;a, tab, sizeof(*tab));
+    tm_allocator_api-&gt;destroy_child(&amp;a);
 }
 
 </code></pre>
@@ -463,6 +467,7 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api* reg, bool load)
 
     tm_draw2d_api = reg-&gt;get(TM_DRAW2D_API_NAME);
     tm_ui_api = reg-&gt;get(TM_UI_API_NAME);
+    tm_allocator_api = reg-&gt;get(TM_ALLOCATOR_API_NAME);
 
     tm_set_or_remove_api(reg, load, TM_CUSTOM_TAB_VT_NAME, custom_tab_vt);
     tm_add_or_remove_implementation(reg, load, TM_TAB_VT_INTERFACE_NAME, custom_tab_vt);
