deploy: cf33d7ccebfdd572d752be29b20571a74b1a1434

--- a/tutorials/print.html
+++ b/tutorials/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="index.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item "><a href="workflows/how_to_create_prototypes.html"><strong aria-hidden="true">2.</strong> How to create prototypes</a></li><li class="chapter-item "><a href="workflows/how_to_instantiate_prototypes.html"><strong aria-hidden="true">3.</strong> How to instantiate prototypes</a></li><li class="chapter-item "><a href="creation_graph/index.html"><strong aria-hidden="true">4.</strong> Creation Graph</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="creation_graph/custom_gpu_nodes.html"><strong aria-hidden="true">4.1.</strong> Creating custom GPU nodes</a></li><li class="chapter-item "><a href="creation_graph/custom_cpu_nodes.html"><strong aria-hidden="true">4.2.</strong> Creating custom CPU nodes</a></li><li class="chapter-item "><a href="creation_graph/from_code.html"><strong aria-hidden="true">4.3.</strong> Calling Creation Graphs from code</a></li></ol></li><li class="chapter-item "><a href="physics/index.html"><strong aria-hidden="true">5.</strong> Physics</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="physics/triggers.html"><strong aria-hidden="true">5.1.</strong> Triggers</a></li></ol></li><li class="chapter-item "><a href="the_truth/index.html"><strong aria-hidden="true">6.</strong> The Truth</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/index.html"><strong aria-hidden="true">6.1.</strong> Creating a custom asset</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/part1.html"><strong aria-hidden="true">6.1.1.</strong> Part 1 - Create an Asset Truth Type, Addable via Asset Browser</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part2.html"><strong aria-hidden="true">6.1.2.</strong> Part 2 - Custom UI</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part3.html"><strong aria-hidden="true">6.1.3.</strong> Part 3 - Custom Importer</a></li></ol></li><li class="chapter-item "><a href="the_truth/drag_and_drop.html"><strong aria-hidden="true">6.2.</strong> Adding Drag and Drop to Assets</a></li><li class="chapter-item "><a href="the_truth/open_asset.html"><strong aria-hidden="true">6.3.</strong> Open Asset in Tab</a></li></ol></li><li class="chapter-item "><a href="gameplay_coding/index.html"><strong aria-hidden="true">7.</strong> Gameplay Coding</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="gameplay_coding/extend_the_visual_scripting_language.html"><strong aria-hidden="true">7.1.</strong> Extending the Visual Scripting Language</a></li></ol></li><li class="chapter-item "><a href="ui/index.html"><strong aria-hidden="true">8.</strong> UI</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/index.html"><strong aria-hidden="true">8.1.</strong> Build Custom UI Controls</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/part1.html"><strong aria-hidden="true">8.1.1.</strong> Part 1</a></li></ol></li><li class="chapter-item "><a href="ui/toolbars-overlays.html"><strong aria-hidden="true">8.2.</strong> Toolbars and Overlays</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item "><a href="index.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item "><a href="workflows/how_to_create_prototypes.html"><strong aria-hidden="true">2.</strong> How to create prototypes</a></li><li class="chapter-item "><a href="workflows/how_to_instantiate_prototypes.html"><strong aria-hidden="true">3.</strong> How to instantiate prototypes</a></li><li class="chapter-item "><a href="creation_graph/index.html"><strong aria-hidden="true">4.</strong> Creation Graph</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="creation_graph/custom_gpu_nodes.html"><strong aria-hidden="true">4.1.</strong> Creating custom GPU nodes</a></li><li class="chapter-item "><a href="creation_graph/custom_cpu_nodes.html"><strong aria-hidden="true">4.2.</strong> Creating custom CPU nodes</a></li><li class="chapter-item "><a href="creation_graph/from_code.html"><strong aria-hidden="true">4.3.</strong> Calling Creation Graphs from code</a></li><li class="chapter-item "><a href="creation_graph/raymarch_output_node.html"><strong aria-hidden="true">4.4.</strong> Creating a custom raymarching output node</a></li></ol></li><li class="chapter-item "><a href="physics/index.html"><strong aria-hidden="true">5.</strong> Physics</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="physics/triggers.html"><strong aria-hidden="true">5.1.</strong> Triggers</a></li></ol></li><li class="chapter-item "><a href="the_truth/index.html"><strong aria-hidden="true">6.</strong> The Truth</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/index.html"><strong aria-hidden="true">6.1.</strong> Creating a custom asset</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="the_truth/custom_asset/part1.html"><strong aria-hidden="true">6.1.1.</strong> Part 1 - Create an Asset Truth Type, Addable via Asset Browser</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part2.html"><strong aria-hidden="true">6.1.2.</strong> Part 2 - Custom UI</a></li><li class="chapter-item "><a href="the_truth/custom_asset/part3.html"><strong aria-hidden="true">6.1.3.</strong> Part 3 - Custom Importer</a></li></ol></li><li class="chapter-item "><a href="the_truth/drag_and_drop.html"><strong aria-hidden="true">6.2.</strong> Adding Drag and Drop to Assets</a></li><li class="chapter-item "><a href="the_truth/open_asset.html"><strong aria-hidden="true">6.3.</strong> Open Asset in Tab</a></li></ol></li><li class="chapter-item "><a href="gameplay_coding/index.html"><strong aria-hidden="true">7.</strong> Gameplay Coding</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="gameplay_coding/extend_the_visual_scripting_language.html"><strong aria-hidden="true">7.1.</strong> Extending the Visual Scripting Language</a></li></ol></li><li class="chapter-item "><a href="ui/index.html"><strong aria-hidden="true">8.</strong> UI</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/index.html"><strong aria-hidden="true">8.1.</strong> Build Custom UI Controls</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui/build_custom_ui_controls/part1.html"><strong aria-hidden="true">8.1.1.</strong> Part 1</a></li></ol></li><li class="chapter-item "><a href="ui/toolbars-overlays.html"><strong aria-hidden="true">8.2.</strong> Toolbars and Overlays</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -737,6 +737,232 @@ TM_DLL_EXPORT void load_plugin(struct tm_api_registry_api *reg, bool load)
 
 	tm_add_or_remove_implementation(reg, load, TM_THE_TRUTH_CREATE_TYPES_INTERFACE_NAME, create_truth_types);
 	tm_add_or_remove_implementation(reg, load, TM_ENTITY_CREATE_COMPONENT_INTERFACE_NAME, component__create_manager);
+}
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="creating-a-raymarching-creation-graph-output-node"><a class="header" href="#creating-a-raymarching-creation-graph-output-node">Creating a raymarching creation graph output node</a></h1>
+<p>In this tutorial, we'll learn a little more about the creation graph system by doing a custom raymarching output node. There are many resources about raymarching on the internet,
+so we'll focus only on integrating it on The Machinery. The fun about it is that we won't target any geometric figure in this tutorial, our node we'll only query the signed
+distance, so you can do any kind of geometric figure using the other creation graph nodes. You can extend it to play with volumetric effects or other kinds of nice effects.</p>
+<p>When you create a shader for The Machinery, you'll need to put it in <code>bin/data/shaders</code>. We will improve this workflow, but for now, you can use a custom rule in premake5 to copy your custom shaders
+to the correct directory. The source code and a example project with a sdf plane and sphere can be found at <a href="https://github.com/raphael-ourmachinery/tm_raymarch_tutorial.git">tm_raymarch_tutorial</a>, and you can look at <a href="https://ourmachinery.com/apidoc/doc/shader_system_reference.md.html">shader_system_reference</a> for a complete overview of concepts used in this tutorial.</p>
+<p>Ok, so what are our requisites?</p>
+<ul>
+<li>Use the scene camera as our start point for raymarching;</li>
+<li>Blend our results with objects in the viewport;</li>
+<li>To be able to query the signed distance in each loop interaction;</li>
+</ul>
+<p>Let's forget for a moment that we're creating an output node. The shader language is basically hlsl inside JSON blocks. We start by defining some basic blocks.</p>
+<ul>
+<li>Enable alpha blending:</li>
+</ul>
+<pre><code class="language-c">blend_states : {
+   logical_operation_enable: false
+   render_target_0 : {
+       blend_enable: true
+       write_mask : &quot;red|green|blue|alpha&quot;
+       source_blend_factor_color : &quot;source_alpha&quot;
+       destination_blend_factor_color : &quot;one_minus_source_alpha&quot;
+   }
+} 
+</code></pre>
+<ul>
+<li>Disable face culling:</li>
+</ul>
+<pre><code class="language-c">raster_states : {
+    polygon_mode: &quot;fill&quot;
+    cull_mode: &quot;none&quot; 
+    front_face : &quot;ccw&quot;
+}
+</code></pre>
+<ul>
+<li>We want to access entity's world transform, later we'll export it to shader function nodes, so our sdf can take it in account:</li>
+</ul>
+<pre><code class="language-c">imports : [    
+    { name: &quot;tm&quot; type: &quot;float4x4&quot; }
+]
+
+common : [[
+#define MAX_STEPS 1000
+#define MAX_DIST 1000.0
+#define SURF_DIST 0.01
+]]
+</code></pre>
+<p>Now we can look at vertex shader, our viewport quad is constructed with a tringle that we'll be clipped later, you can explicitly create a quad with four vertices too, we're doing this because it has some perfomance gain and is consistent with othe shaders in engine. The shader will consist of the following parts:</p>
+<ul>
+<li>A import semantics blocks that we use to query vertex_id, which is translated to SV_VertexID;</li>
+<li>A exports block used to export camera ray and world position, looking at shader below we see for the first time the channel concept, by adding <code>channel_requested: true</code>, the value can be requested by other nodes, and will define <code>TM_CHANNEL_AVAILABLE_i*</code> that other nodes can look. If some node request a channel <code>TM_CHANNEL_REQUESTED_*</code> will be defined too. <code>tm_graph_io_t</code> generated struct will have the <code>world_position</code> field, and we use it to expose entity's world position to the graph, at the end call <code>tm_graph_write()</code> that will write <code>world_position</code> to shader output.</li>
+</ul>
+<pre><code class="language-c">vertex_shader : {
+   import_system_semantics : [ &quot;vertex_id&quot; ]
+   exports : [
+       { name: &quot;camera_ray&quot; type: &quot;float3&quot;}
+       { name: &quot;world_position&quot; type: &quot;float3&quot; channel_requested: false }
+   ]
+
+   code : [[
+
+       tm_graph_io_t graph;
+       #if defined(TM_CHANNEL_REQUESTED_world_position)
+           graph.world_position = load_tm()._m30_m31_m32;
+       #endif
+
+       static const float4 pos[3] = {
+           { -1,  1,  0, 1 },
+           {  3,  1,  0, 1 },
+           { -1, -3,  0, 1 },
+       };
+   
+       output.position = pos[vertex_id];
+
+
+       float4x4 inverse_view = load_camera_inverse_view();
+       float4 cp = float4(pos[vertex_id].xy, 0, 1);
+       float4 p = mul(cp, load_camera_inverse_projection());
+       output.camera_ray = mul(p.xyz, (float3x3)inverse_view);        
+
+       tm_graph_write(output, graph);
+       return output;
+   ]]
+}
+
+</code></pre>
+<p>As mentioned before, our goal is to have a generic output node, the signed distance used for raymarching we be supplied by the graph, so now is good moment to define our creation graph node block:</p>
+<pre><code class="language-c">creation_graph_node : {
+   name: &quot;raymarch_output&quot;
+   display_name: &quot;Raymarch&quot;
+   category: &quot;Shader/Output&quot;
+
+   inputs : [
+       { name: &quot;distance&quot; display_name: &quot;Distance&quot; type: &quot;float&quot; evaluation_stage: [&quot;pixel_shader&quot;] evaluation_contexts : [&quot;distance&quot;] optional: false }
+       { name: &quot;color&quot; display_name: &quot;Color (3)&quot; type: &quot;float3&quot; evaluation_stage: [&quot;pixel_shader&quot;] evaluation_contexts : [&quot;default&quot;, &quot;color&quot;] optional: false }
+       { name: &quot;light_position&quot; display_name: &quot;Light Pos (3)&quot; type: &quot;float3&quot; evaluation_stage: [&quot;pixel_shader&quot;] optional: false }
+   ]
+}
+</code></pre>
+<p>You can see that we can define the evaluation stage for inputs, in our case we'll only need these inputs in pixel shader. The way a shader access these inputs it's using the appropriate field of <code>tm_graph_io_t</code>, but before do that we have to call evaluate function, if not specified an evaluation context the input we'll be added to default evaluation context. Shader system will generate 
+<code>tm_graph_evaluate()</code> function for default context and <code>tm_graph_evaluate_context_name()</code> for remaining contexts, note that one input could be in more than one evalution context. All this we'll be usefull because we need query signed distance in every loop interaction, by using an evaluation context the process is cheaper, because only functions related to this input we'll be called. Below you can see the final pixel shader, as we need to evaluate the graph, we can't put the raymarching code in <code>common</code> block, as <code>tm_graph_io_t</code> for pixel shader isn't defined at this point:</p>
+<pre><code class="language-c">pixel_shader : {
+   exports : [
+       { name : &quot;color&quot; type: &quot;float4&quot; }
+       { name: &quot;sample_position&quot; type: &quot;float3&quot; channel_requested: true }
+   ]
+
+   code : [[
+
+
+       float3 world_pos = load_camera_position();
+       float3 world_dir = normalize(input.camera_ray);
+
+       tm_graph_io_t graph;
+       tm_graph_read(graph, input);
+       tm_graph_evaluate(graph);
+
+       // Get distance
+       float d = 0.0;
+       float amb = 0.0;
+       float alpha = 1.0;
+       for (int i = 0; i &lt; MAX_STEPS; i++) {
+           float3 p = world_pos + world_dir * d;
+           #if defined(TM_CHANNEL_REQUESTED_sample_position)
+               graph.sample_position = p;
+           #endif        
+           tm_graph_evaluate_distance(graph);
+           float ds = graph.distance;
+           d += ds;
+
+           if (ds &lt; SURF_DIST) {
+               amb = 0.01;
+               break;
+           }
+           if (d &gt; MAX_DIST) {
+               alpha = 0.0;
+               break;
+           }
+       }
+       
+       float3 p = world_pos + world_dir * d;
+
+       // Normal calculation
+       #if defined(TM_CHANNEL_REQUESTED_sample_position)
+           graph.sample_position = p;
+       #endif        
+       tm_graph_evaluate_distance(graph);
+       d = graph.distance;
+
+       float2 e = float2(0.01, 0);
+
+       #if defined(TM_CHANNEL_REQUESTED_sample_position)
+           graph.sample_position = p - e.xyy;
+       #endif        
+       tm_graph_evaluate_distance(graph);
+       float n1 = graph.distance;
+
+       #if defined(TM_CHANNEL_REQUESTED_sample_position)
+           graph.sample_position = p - e.yxy;
+       #endif        
+       tm_graph_evaluate_distance(graph);
+       float n2 = graph.distance;
+
+       #if defined(TM_CHANNEL_REQUESTED_sample_position)
+           graph.sample_position = p - e.yyx;
+       #endif        
+       tm_graph_evaluate_distance(graph);
+       float n3 = graph.distance;
+
+       float3 n = float3(d, d, d) - float3(n1, n2, n3);
+       n = normalize(n);
+       
+       // Light calculation
+       float3 light_pos = graph.light_position;
+       float3 l = normalize(light_pos - p);
+       float dif = saturate(dot(n, l));
+
+       d = 0.f;
+       for (int j = 0; j &lt; MAX_STEPS; j++) {
+           float3 pos = (p + n * SURF_DIST * 2.0) + l * d;
+           #if defined(TM_CHANNEL_REQUESTED_sample_position)
+               graph.sample_position = pos;
+           #endif        
+           tm_graph_evaluate_distance(graph);
+           float ds = graph.distance;
+           d += ds;
+
+           if (d &gt; MAX_DIST || ds &lt; SURF_DIST) 
+               break;
+       }
+
+       if (d &lt; length(light_pos))
+           dif *= 0.1;
+
+       float3 col = graph.color;
+       col = col * dif + amb;
+
+       output.color = float4(col, alpha);
+
+       return output;
+
+   ]]
+}
+
+</code></pre>
+<p>Finnaly we'll define the compile block, we only need of <code>viewer_system</code> to access camera related constants and render our result at <code>hdr-transparency</code> layer:</p>
+<pre><code class="language-c">compile : {
+   configurations: {
+       default: [
+           { 
+               variations : [
+                   { systems: [ &quot;viewer_system&quot; ] }
+               ]
+           }
+       ]
+
+   }
+
+   contexts: {
+       viewport: [
+           { layer: &quot;hdr-transparency&quot; configuration: &quot;default&quot; }
+       ]
+   }
 }
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="physics"><a class="header" href="#physics">Physics</a></h2>
